plex/jackett/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      name: jackett
  template:
    metadata:
      labels:
        name: jackett
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plex-pvc
      containers:
        - name: jackett
          ports:
            - containerPort: 9117
          image: ghcr.io/k8s-at-home/jackett
          volumeMounts:
            - mountPath: /config
              name: data
              subPath: jackett/config
            - mountPath: /downloads
              name: data
              subPath: jackett/downloads
