plex/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-lan-jackett
spec:
  ingressClassName: nginx-lan
  rules:
  - host: jackett.local
    http:
      paths:
      - backend:
          service:
            name: jackett
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jackett.local
